feat: working basic Net

--- a/my-grad.ipynb
+++ b/my-grad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,9 +43,29 @@
     "        result._backward = backward\n",
     "        \n",
     "        return result  \n",
+    "    \n",
+    "    def __pow__(self, other):\n",
+    "        assert isinstance(other, (float, int)), \"only float and int supported in pow\"\n",
+    "\n",
+    "        new_value = self.value ** other\n",
+    "        result = V(new_value, op='**', parents=(self,))\n",
+    "\n",
+    "        def backward():\n",
+    "            self.grad += other * (self.value ** (other - 1)) * result.grad \n",
+    "\n",
+    "        result._backward = backward\n",
+    "\n",
+    "        return result\n",
     "\n",
     "    def __radd__(self, other):\n",
     "        return self.__add__(other)\n",
+    "\n",
+    "    def __sub__(self, other):\n",
+    "        other = V._cast_to_v(other)\n",
+    "        return self.__add__(other.__mul__(-1))\n",
+    "    \n",
+    "    def __rsub__(self, other):\n",
+    "        return self.__sub__(other)\n",
     "    \n",
     "    def __rmul__(self,other):\n",
     "        return self.__mul__(other)\n",
@@ -92,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +121,7 @@
        "0.09966799462495583"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,56 +241,28 @@
     "    def __call__(self, inputs):\n",
     "        for layer in self.layers:\n",
     "            inputs = layer(inputs)\n",
-    "        return pick_only_element(inputs) \n",
+    "        return unwrap_if_single_element(inputs) \n",
     "    \n",
     "    def params(self):\n",
     "        return [params for layer in self.layers for params in layer.params()]\n",
     "\n",
-    "def pick_only_element(array):\n",
+    "def unwrap_if_single_element(array):\n",
     "    return array[0] if len(array) == 1 else array\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "result None: value=-0.6597117036351087 grad=1.0 op=tanh\n"
+      "None: value=0.9739032821337767 grad=0 op=tanh\n",
+      "None: value=-0.00024356531175706204 grad=0 op=tanh\n",
+      "None: value=0.9785549003781723 grad=0 op=tanh\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[None: value=0.9485838347113487 grad=0.0004708734210985213 op=None,\n",
-       " None: value=0.9033884294596539 grad=0.0004708734210985213 op=None,\n",
-       " None: value=-0.5762747623000712 grad=0.0009417468421970426 op=None,\n",
-       " None: value=0.5653586031908977 grad=0.001412620263295564 op=None,\n",
-       " None: value=-0.718828198025419 grad=-0.0009319648595908799 op=None,\n",
-       " None: value=0.8938478574494946 grad=-0.0009319648595908799 op=None,\n",
-       " None: value=0.31177725675963885 grad=-0.0018639297191817598 op=None,\n",
-       " None: value=0.9713736227541772 grad=-0.0027958945787726398 op=None,\n",
-       " None: value=-0.23388356199406424 grad=-0.15098619194718169 op=None,\n",
-       " None: value=0.04478300866794771 grad=-0.15098619194718169 op=None,\n",
-       " None: value=-0.04304422249376505 grad=-0.30197238389436337 op=None,\n",
-       " None: value=-0.21449076459114647 grad=-0.4529585758415451 op=None,\n",
-       " None: value=-0.37310829101498255 grad=-0.15733321164998046 op=None,\n",
-       " None: value=-0.39411520772862696 grad=-0.15733321164998046 op=None,\n",
-       " None: value=-0.11383790048561648 grad=-0.3146664232999609 op=None,\n",
-       " None: value=0.6904238660665682 grad=-0.47199963494994135 op=None,\n",
-       " None: value=0.057231339210390475 grad=0.5647804680868626 op=None,\n",
-       " None: value=0.025518271192298103 grad=0.555477650667271 op=None,\n",
-       " None: value=-0.6930798589521336 grad=0.5641077315819376 op=None,\n",
-       " None: value=-0.5640086406691824 grad=-0.40961465490038745 op=None,\n",
-       " None: value=-0.7469001811240832 grad=0.44722138057612015 op=None]"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -281,22 +273,37 @@
     "    [5,4,1],\n",
     "    [3,2,5]\n",
     "]\n",
-    "expected_outputs = [\n",
-    "    [1,0,1]\n",
-    "]\n",
+    "expected_outputs =     [1,0,1]\n",
     "\n",
-    "def loss(actual_output, expected_output):\n",
-    "    return (expected_output - actual_output)\n",
     "\n",
-    "for (ins, expected_output) in zip(inputs,expected_outputs):\n",
-    "    \n",
+    "def loss(actual_outputs, expected_outputs):\n",
+    "    return sum([(actual - expected) ** 2 for actual, expected in zip(actual_outputs, expected_outputs)])\n",
     "\n",
-    "result = net([1,2,3])\n",
-    "result.backward()\n",
+    "def forward(net, inputs):\n",
+    "    actual_outputs = []\n",
+    "    for single_input in inputs:\n",
+    "        actual_outputs.append(net(single_input))\n",
+    "    return actual_outputs\n",
     "\n",
-    "print(\"result\", result)\n",
+    "def step(net, inputs, step_size = 0.001):\n",
+    "    for param in net.params():\n",
+    "        param.grad = 0.0\n",
+    "    actual_outputs = forward(net, inputs)\n",
+    "    cost = loss(actual_outputs, expected_outputs)\n",
+    "    cost.backward()\n",
     "\n",
-    "net.params()\n",
+    "    for param in net.params():\n",
+    "        param.value -= step_size * param.grad\n",
+    "\n",
+    "    return cost\n",
+    "\n",
+    "for i in range(10000):\n",
+    "    cost = step(net, inputs)\n",
+    "\n",
+    "for input in inputs:\n",
+    "    print(net(input))\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
