--- a/my-grad.ipynb
+++ b/my-grad.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "0.09966799462495583"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,16 +195,12 @@
     "L = f + g; L.label = 'L'\n",
     "tan_L  = L.tanh(); tan_L.label = 'tanh(L)'\n",
     "\n",
-    "tan_L.backward()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "tan_L.backward()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,22 +242,47 @@
     "    def params(self):\n",
     "        return [params for layer in self.layers for params in layer.params()]\n",
     "\n",
+    "    def reset_grad(self):\n",
+    "        for param in self.params():\n",
+    "            param.grad = 0.0\n",
+    "        \n",
+    "\n",
     "def unwrap_if_single_element(array):\n",
-    "    return array[0] if len(array) == 1 else array\n"
+    "    return array[0] if len(array) == 1 else array\n",
+    "\n",
+    "def loss(actual_outputs, expected_outputs):\n",
+    "    return sum([(actual - expected) ** 2 for actual, expected in zip(actual_outputs, expected_outputs)])\n",
+    "\n",
+    "def forward(net, inputs):\n",
+    "    actual_outputs = []\n",
+    "    for single_input in inputs:\n",
+    "        actual_outputs.append(net(single_input))\n",
+    "    return actual_outputs\n",
+    "\n",
+    "def step(net, inputs, expected_outputs, step_size = 0.002):\n",
+    "    net.reset_grad()\n",
+    "    actual_outputs = forward(net, inputs)\n",
+    "    cost = loss(actual_outputs, expected_outputs)\n",
+    "    cost.backward()\n",
+    "\n",
+    "    for param in net.params():\n",
+    "        param.value -= step_size * param.grad\n",
+    "\n",
+    "    return cost\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None: value=0.9739032821337767 grad=0 op=tanh\n",
-      "None: value=-0.00024356531175706204 grad=0 op=tanh\n",
-      "None: value=0.9785549003781723 grad=0 op=tanh\n"
+      "expected output: 1 actual: None: value=0.9305031489849274 grad=0 op=tanh\n",
+      "expected output: 0 actual: None: value=0.005431402594292498 grad=0 op=tanh\n",
+      "expected output: 1 actual: None: value=0.933125569444634 grad=0 op=tanh\n"
      ]
     }
    ],
@@ -273,38 +294,14 @@
     "    [5,4,1],\n",
     "    [3,2,5]\n",
     "]\n",
-    "expected_outputs =     [1,0,1]\n",
     "\n",
+    "expected_outputs = [1,0,1]\n",
     "\n",
-    "def loss(actual_outputs, expected_outputs):\n",
-    "    return sum([(actual - expected) ** 2 for actual, expected in zip(actual_outputs, expected_outputs)])\n",
+    "for i in range(1000):\n",
+    "    cost = step(net, inputs, expected_outputs)\n",
     "\n",
-    "def forward(net, inputs):\n",
-    "    actual_outputs = []\n",
-    "    for single_input in inputs:\n",
-    "        actual_outputs.append(net(single_input))\n",
-    "    return actual_outputs\n",
-    "\n",
-    "def step(net, inputs, step_size = 0.001):\n",
-    "    for param in net.params():\n",
-    "        param.grad = 0.0\n",
-    "    actual_outputs = forward(net, inputs)\n",
-    "    cost = loss(actual_outputs, expected_outputs)\n",
-    "    cost.backward()\n",
-    "\n",
-    "    for param in net.params():\n",
-    "        param.value -= step_size * param.grad\n",
-    "\n",
-    "    return cost\n",
-    "\n",
-    "for i in range(10000):\n",
-    "    cost = step(net, inputs)\n",
-    "\n",
-    "for input in inputs:\n",
-    "    print(net(input))\n",
-    "\n",
-    "\n",
-    "\n"
+    "for (input,expected_output) in zip(inputs,expected_outputs):\n",
+    "    print(f\"expected output: {expected_output} actual: {net(input)}\")\n"
    ]
   },
   {
